# ncs_samples

./: README.md
ble_peripheral_cus_service/: CMakeLists.txt  README.rst  prj.conf
ble_peripheral_cus_service/services/: my_service.c  my_service.h
ble_peripheral_cus_service/src/: main.c
central_smp_client_dfu/: README.md  README.rst  cbor_module_patch_dfu_mcumgr.patch  pm_static.yml  prj.conf
central_smp_client_dfu/src/: main.c
cus_buttons/: README.rst  nrf5340dk_nrf5340_cpuapp.overlay
cus_buttons/dts/bindings/: bms-pins.yaml
cus_buttons/src/: main.c
gpio_toggle/src/: main.c
multi_img_dfu/: CMakeLists.txt  pm_static_nrf52833dk_nrf52833.yml  pm_static_nrf52840dk_nrf52840.yml  prj.conf
multi_img_dfu/src/: main.c
spi_slave_and_master_ncs_v200/spi_master/: README.rst  nrf52840dk_nrf52840.overlay  nrf5340pdk_nrf5340_cpuapp.overlay  nrf9160dk_nrf9160.overlay  nrf9160dk_nrf9160_ns.overlay  prj.conf
spi_slave_and_master_ncs_v200/spi_slave/: CMakeLists.txt  README.rst  nrf52840dk_nrf52840.overlay  prj.conf  zephyr_ncs170_timeout_fix_spis_patch.patch
spi_slave_and_master_ncs_v200/spi_slave/src/: main.c
uart_async/: prj.conf
uart_async/boards/: nrf52840dk_nrf52840.overlay  nrf9160dk_nrf9160.conf
uart_async/src/: main.c  test_uart.h  test_uart_async.c
uart_async_api_double_buffer/src/: main.c  test_uart.h  test_uart_async.c
uart_async_api_single_read/src/: main.c  test_uart.h  test_uart_async.c
update_mcuboot_app_and_netcore/: README.md  README.rst  prj.conf
update_mcuboot_app_and_netcore/src/: main.c
(+2 files in other folders)
